packages/moonjuice-parser/src/tests/snapshots/moonjuice_parser__tests__smoke_tests__tests__should_parse_issue_9.snap
---
source: packages/moonjuice-parser/src/tests/smoke_tests.rs
expression: "$crate :: tokenise_and_parse(\"(do 5 end) |> print\".chars().collect())"
---
- value:
    Expression:
      BinaryOperator:
        op: Pipe
        lhs:
          value:
            Block:
              - value:
                  Expression:
                    Int: 5
                start:
                  line: 1
                  column: 5
                end:
                  line: 1
                  column: 6
          start:
            line: 1
            column: 2
          end:
            line: 1
            column: 10
        rhs:
          value:
            Symbol: print
          start:
            line: 1
            column: 15
          end:
            line: 1
            column: 20
  start:
    line: 1
    column: 12
  end:
    line: 1
    column: 14
